--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuma</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>NEUMA</h1>
+    
 </body>
 </html>
